add delete aapi API and update the fields of aapi
