# backend/src/models/aapi.ts
@@ -5,9 +5,12 @@ const Schema = mongoose.Schema
 
 const aapiSchema = new Schema(
   {
-    name: { type: String, required: true },
+    title: { type: String, required: true },
+    description: { type: String },
     productSuite: { type: String, required: true },
+    product:  { type : String, required: true },
     aapiOwner: { type: String, required: true },
+    subject: { type: String, required: true },
     doc: { type: String, required: true },
     doc_json: { type: String },
     subscribers: { type: Array },
